--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -9,16 +9,16 @@
       <div class="list-group w-auto list-group-item list-group-item-action text-bg-dark gap-3 py-3"> 
          <div *ngFor="let Experiencia of experiencia">
               <div class="row">
-              <div class="col-1">
-                <img src="" width="70" height="70">
+                <div class="col-lg-1 col-md-2 col-sm-4">
+                <img src={{Experiencia.img}} class="img-fluid" width="115" height="100">
               </div>
-              <div class="col-10 cursos">
+              <div class="col-lg-10 col-md-8 col-sm-4 experiencia">
               <h2 class="mb-0">{{Experiencia.experiencia}}</h2>
               <p class="mb-0 opacity-75">{{Experiencia.empresa}}</p>
               <p class="mb-0 opacity-75">{{Experiencia.tareas}}</p>
               <p class="mb-0 opacity-75">{{Experiencia.periodo}}</p>
               </div>
-              <div class="col-1">
+              <div class="col-lg-1 col-md-2 col-sm-4">
               <span class="boton" *ngIf="isLogged">
                 <button class="btn btn-light" routerLink="/editexp/{{Experiencia.id}}">
                   <i class="bi bi-pencil-fill"></i>
