--- a/src/app/components/habilidades/edit-habilidades.component.html
+++ b/src/app/components/habilidades/edit-habilidades.component.html
@@ -26,9 +26,16 @@
                     <label class="form-label" for="nivel"></label>
                 </div>
                 <div class="form-outline form-white mb-4">
-                    <input type="file" class="form-control" placeholder="Imagen" id="img" name="img" [(ngModel)]="habilidades.img" required>
+                    <input type="file" class="form-control" placeholder="Imagen" id="img" name="img" (change)="uploadImage($event)" accept=".jpg, .jpeg, .png">
                     <label class="form-label" for="img"></label>
                 </div>
+
+                <div class="imagen">
+                  <img [src]="habilidades.img" width="140px" *ngIf='imageService.url == ""'>
+                  <img [src]="imageService.url" width="140px" *ngIf='imageService.url != ""'>
+                </div>
+  
+                <br>
                 
                 <button class="btn btn-outline-light px-5" type="submit">Editar habilidad</button>
 
