--- a/src/app/components/experiencia/edit-experiencia.component.html
+++ b/src/app/components/experiencia/edit-experiencia.component.html
@@ -28,11 +28,18 @@
                  </div>
 
                  <div class="form-outline form-white mb-4">
-                     <input type="file" class="form-control" placeholder="Imagen" id="img" name="img" [(ngModel)]="experiencia.img" required>
+                     <input type="file" class="form-control" placeholder="Imagen" id="img" name="img" (change)="uploadImage($event)" accept=".jpg, .jpeg, .png">
                      <label class="form-label" for="img"></label>
                  </div>
 
-                     <button class="btn btn-outline-light px-5" type="submit">Editar experiencia</button> 
+                 <div class="imagen">
+                    <img [src]="experiencia.img" width="140px" *ngIf='imageService.url == ""'>
+                    <img [src]="imageService.url" width="140px" *ngIf='imageService.url != ""'>
+                  </div>
+    
+                  <br>
+
+                  <button class="btn btn-outline-light px-5" type="submit">Editar experiencia</button> 
 
              </form>
 
