--- a/src/app/components/experiencia/experiencia.component.css
+++ b/src/app/components/experiencia/experiencia.component.css
@@ -2,7 +2,6 @@
     padding-left: 12px;
 }
 
-.cursos{
-    margin-left: -40px;
-    margin-bottom: 15px;
+.experiencia{
+    margin-bottom: 25px;
 }
