--- a/src/app/components/experiencia/new-experiencia.component.html
+++ b/src/app/components/experiencia/new-experiencia.component.html
@@ -27,11 +27,17 @@
                 </div>
   
                 <div class="form-outline form-white mb-4">
-                  <input type="file" class="form-control" placeholder="Imagen" id="img" name="img" [(ngModel)]="img" required>
+                  <input type="file" class="form-control" placeholder="Imagen" id="img" name="img" (change)="uploadImage($event)" accept=".jpg, .jpeg, .png">
                   <label class="form-label" for="img"></label>
                 </div>
+
+                <div class="imagen">
+                  <img [src]="imageService.url" width="140px" *ngIf='imageService.url != ""'>
+                </div>
+
+                <br>
   
-                  <button class="btn btn-outline-light px-5" type="submit">Agregar experiencia</button> 
+                <button class="btn btn-outline-light px-5" type="submit">Agregar experiencia</button> 
                   
               </form>
   
