--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -13,13 +13,13 @@
                 <form #f="ngForm" (ngSubmit)="onLogin()" novalidate >
 
                   <div class="form-outline form-white mb-4">
-                    <input type="user" id="nombreUsuario" name="nombreUsuario" class="form-control form-control-lg" [(ngModel)]="nombreUsuario" name="nombreUsuario" required/>
-                    <label class="form-label" for="nombreUsuario">Usuario</label>
+                    <input type="user" id="nombreUsuario" placeholder="Usuario" name="nombreUsuario" class="form-control form-control-lg" [(ngModel)]="nombreUsuario" name="nombreUsuario" required/>
+                    <label class="form-label" for="nombreUsuario"></label>
                   </div>
     
                   <div class="form-outline form-white mb-4">
-                    <input type="password" id="password" class="form-control form-control-lg" [(ngModel)]="password" name="password" required/>
-                    <label class="form-label" for="password">Contraseña</label>
+                    <input type="password" id="password" placeholder="Contraseña" class="form-control form-control-lg" [(ngModel)]="password" name="password" required/>
+                    <label class="form-label" for="password"></label>
                   </div>
     
                   <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
@@ -28,11 +28,6 @@
                 </form>
   
   
-              </div>
-  
-              <div>
-                <p class="mb-0">No tienes una cuenta? <a href="#!" class="text-white-50 fw-bold">Registrate</a>
-                </p>
               </div>
   
             </div>
